[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ssw", email = "sswss5@aliyun.com"},
]
dependencies = [
    "psutil>=5.9.4",
    "pynvml>=11.5.0",
    "pg8000>=1.29.4",
    "paramiko>=3.1.0",
    "xlwt>=1.3.0",
    "xlsxwriter>=3.0.9",
    "etcd3>=0.12.0",
    "retry>=0.9.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}


